hueshift fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,29 +97,18 @@ h1 {
   font-weight: bold;
   color: white;
   text-align: center;
-  animation: rainbowShift 3s linear infinite;
+  text-shadow:
+    0 0 20px red,
+    0 0 40px orange,
+    0 0 60px yellow,
+    0 0 80px green,
+    0 0 100px blue,
+    0 0 120px indigo,
+    0 0 140px violet;
+  animation: hueShift 5s linear infinite;
 }
 
-@keyframes rainbowShift {
-  0% {
-    text-shadow:
-      -40px 0 20px red,
-      -20px 0 20px orange,
-        0px 0 20px yellow,
-       20px 0 20px green,
-       40px 0 20px blue,
-       60px 0 20px indigo,
-       80px 0 20px violet;
-  }
-
-  100% {
-    text-shadow:
-       80px 0 20px red,
-       60px 0 20px orange,
-       40px 0 20px yellow,
-       20px 0 20px green,
-        0px 0 20px blue,
-      -20px 0 20px indigo,
-      -40px 0 20px violet;
-  }
+@keyframes hueShift {
+  0% {filter: hue-rotate(0deg);}
+  100% {filter: hue-rotate(360deg);}
 }
